feat: Add GitHub Actions for automated publishing to PyPI, NPM and Docker Hub
- Added publish.yml workflow for releasing to PyPI and NPM
- Added test.yml workflow for testing across multiple OS and Python/Node versions
- Added docker.yml workflow for building and pushing Docker images
- Added NPM wrapper package for easy installation
- Configured GitHub secrets for automated deployment
- Added publishing documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "crawl4ai-mcp"
+name = "crawl4ai-mcp-sse-stdio"
 version = "1.0.0"
 description = "MCP (Model Context Protocol) server for Crawl4AI - Universal web crawling and data extraction"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
-    {name = "stgmt", email = ""},
+    {name = "stgmt"},
 ]
 keywords = [
     "mcp",
