--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -116,6 +116,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [publish-pypi, publish-npm]
     if: github.event_name == 'release'
+    permissions:
+      contents: write
     
     steps:
       - name: Update release with links
