--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ Issues = "https://github.com/stgmt/crawl4ai-mcp/issues"
 crawl4ai-mcp = "crawl4ai_mcp.__main__:main"
 
 [tool.setuptools]
-packages = ["crawl4ai_mcp"]
+packages = {find = {where = ["."], include = ["crawl4ai_mcp*"]}}
 
 [tool.setuptools.package-data]
 crawl4ai_mcp = ["py.typed"]
