--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -101,6 +101,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: crawl4ai-mcp:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
