--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,10 +124,10 @@ ignore = [
 ]
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
-disallow_untyped_defs = true
+disallow_untyped_defs = false
 disallow_any_unimported = false
 no_implicit_optional = true
 warn_redundant_casts = true
@@ -135,6 +135,7 @@ warn_unused_ignores = true
 warn_no_return = true
 check_untyped_defs = true
 strict_equality = true
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
