fix: исправлены все ошибки CI/CD и тесты
- Обновлены требования Python на >=3.10 (mcp требует Python 3.10+)
- Исправлена конфигурация Ruff (перенесены настройки в lint секцию)
- Обновлены типы с Optional на X | None (Python 3.10+ синтаксис)
- Исправлены импорты (Callable из collections.abc)
- Переписаны тесты для корректной работы с Server API
- Исправлена Windows NPM установка в CI/CD (использование полного имени файла)
- Удалена поддержка Python 3.9 из CI/CD матрицы
- Обновлены target версии для Black и Ruff

Все локальные проверки проходят:
- Black форматирование ✓
- Ruff линтинг ✓
- mypy типизация ✓
- Сборка пакета ✓

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     
     steps:
       - name: Checkout code
@@ -75,7 +75,7 @@ jobs:
       - name: Test NPM package locally
         run: |
           npm pack
-          npm install -g *.tgz
+          npm install -g crawl4ai-mcp-sse-stdio-*.tgz
           npx crawl4ai-mcp --help
       
       - name: Test bin scripts
