--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,10 +72,25 @@ jobs:
         with:
           python-version: '3.11'
       
-      - name: Test NPM package locally
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+      
+      - name: Test NPM package locally (Unix)
+        if: runner.os != 'Windows'
         run: |
           npm pack
           npm install -g *.tgz
+          npx crawl4ai-mcp --help
+      
+      - name: Test NPM package locally (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          npm pack
+          $tgzFile = Get-ChildItem -Filter "*.tgz" | Select-Object -First 1
+          npm install -g $tgzFile.Name
           npx crawl4ai-mcp --help
       
       - name: Test bin scripts
