fix: Обновление конфигурации ruff для совместимости с новой версией
- Перенесены настройки select и ignore в секцию [tool.ruff.lint]
- Добавлены игнорируемые правила для известных предупреждений (F403, B904, E722)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,8 @@ target-version = ["py310", "py311", "py312"]
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -120,6 +122,9 @@ ignore = [
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
     "W191",  # indentation contains tabs
+    "F403",  # from module import * used
+    "B904",  # raise without from in except clause
+    "E722",  # bare except
 ]
 
 [tool.mypy]
