fix(docker): fix gcc version for Debian

--- a/python-mcp-server/Dockerfile
+++ b/python-mcp-server/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim as builder
 
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc=4:11.2.0-1ubuntu1 \
+    gcc \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory for builder stage
